# string_utils

./: .gitignore  CMakeLists.txt  README.md  string_utils.sln
.github/workflows/: cmake.yml
string_utils/: CMakeLists.txt  string_utils.cpp  string_utils.h  string_utils.vcxproj  string_utils.vcxproj.filters
test_string_utils/: CMakeLists.txt  test_string_case.cpp  test_string_conversions.cpp  test_string_endswith.cpp  test_string_join.cpp  test_string_replace.cpp  test_string_split.cpp  test_string_startswith.cpp  test_string_trim.cpp  test_string_utils.vcxproj  test_string_utils.vcxproj.filters
